# quantbench-green

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  scenario.toml  verify_reproducibility.py
.github/workflows/: docker.yml
baseline_purple/: Dockerfile  __init__.py  agent.py
data/: __init__.py  ingest_yahoo.py
data/frozen/: AAPL.csv  BTC-USD.csv  GLD.csv  MSFT.csv  SPY.csv  TLT.csv  hashes.json  metadata.json
evaluator/: __init__.py  a2a_client.py  agent.py  output.py
evaluator/environment/: __init__.py  arbitrage_books.py  loader.py  regimes.py
evaluator/scoring/: aggregate.py  risk.py
evaluator/tasks/: __init__.py  arbitrage.py  execution.py  portfolio.py  regime_detection.py
evaluator/tests/: test_determinism.py  test_regimes.py
evaluator/visualization/: __init__.py  failure_modes.py
leaderboard/: README.md  scenario.toml  workflow.yml
leaderboard/output/: test-results.json
